--- a/src/templates/frontpage.html
+++ b/src/templates/frontpage.html
@@ -3,14 +3,21 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <title>{{ name }}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+
+    <title>Testshop.dk</title>
   </head>
   <body>
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="#">{{ name }}</a>
+        <a class="navbar-brand" href="/">Testshop.dk</a>
+
+
+          <div id="BasketButtonContainer"></div>
+
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -18,10 +25,11 @@
     </nav>
 
     <div class="container">
-      <div class="row">
-        Velkommen!
-      </div>
-    </div>
+      {% block maincontent %}
 
+      {% endblock maincontent %}
+    </div>
+    <footer><center><small class="text-muted">Den lille testshop der kunne</small></center></footer>
+    <script src="{{ url_for('static', filename='index.js') }}"></script>
   </body>
 </html>
